--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img id="titre" src="/assets/img/titre.png" alt="">
             <fieldset>
                 <legend>Rechercher Pokemon</legend>
-                <div><input type="radio" name="radio" value="1" id="radioName">
+                <div><input type="radio" name="radio" value="1" id="radioName" checked>
                 <label for="name">Par nom</label>
                 <input type="radio" name="radio" value="2" id="radioElement">
                 <label for="element">Par element</label></div>
@@ -32,7 +32,7 @@
     <div class="modal" id="modal">
         <div class="modal-inner">
             <div id="nompokemon"></div>
-            <div><img src="" alt="" id="imagepokemon"></div>
+            <div id="image"><img src="" alt="" id="imagepokemon"></div>
             <div id="typespokemon"></div>
             <div id="evolutionpokemon"></div>
             <button id="retour" onClick="window.location.reload()"><img id="retour-img" src="/assets/img/retour.png" alt=""></button>
