--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css"></link>
-    <script type="module" src="./assets/js/script.js" async></script>
+    <script type="module" src="./assets/js/script2.js" async></script>
     
     <title>Interroger ressource externe</title>
 </head>
@@ -17,9 +17,9 @@
             <img id="titre" src="/assets/img/titre.png" alt="">
             <fieldset>
                 <legend>Rechercher Pokemon</legend>
-                <div><input type="radio" name="radio" value="1" id="radioName" checked>
+                <div><input type="radio" name="radio" value="1" id="radioName">
                 <label for="name">Par nom</label>
-                <input type="radio" name="radio" value="2" id="radioElement">
+                <input type="radio" name="radio" value="1" id="radioElement">
                 <label for="element">Par element</label></div>
             <select id="selection">
                 <option value="-1" id="-1">--Selection--</option>
@@ -30,11 +30,16 @@
     </div>
 <!-- pop-up -->
     <div class="modal" id="modal">
-        <div class="modal-inner">
+        <div class="modal-inner-name">
             <div id="nompokemon"></div>
             <div id="image"><img src="" alt="" id="imagepokemon"></div>
             <div id="typespokemon"></div>
             <div id="evolutionpokemon"></div>
+            <button id="retour" onClick="window.location.reload()"><img id="retour-img" src="/assets/img/retour.png" alt=""></button>
+        </div>
+        <div class="modal-inner-element">
+            <div id="legend"></div>
+            <div id="listepokemons"></div>
             <button id="retour" onClick="window.location.reload()"><img id="retour-img" src="/assets/img/retour.png" alt=""></button>
         </div>
     </div>
