--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <fieldset>
                 <legend>Rechercher Pokemon</legend>
                 <div><input type="radio" name="radio" value="radioName" id="radioName">
-                <label for="name">Par nom</label>
+                <label for="radioName">Par nom</label>
                 <input type="radio" name="radio" value="radioElement" id="radioElement">
-                <label for="element">Par element</label></div>
+                <label for="radioElement">Par element</label></div>
             <select id="selection">
             </select>
         </fieldset>
@@ -28,15 +28,16 @@
         <button id="rechercher"><img id="chercher" src="/assets/img/chercher.png" alt=""></button>
     </div>
 <!-- pop-up -->
-    <!-- <div class="modal" id="modal">
+    <div class="modal" id="modal">
         <div class="modal-inner">
-            <div id="nompokemon"></div>
-            <div id="image"><img src="" alt="" id="imagepokemon"></div>
-            <div id="typespokemon"></div>
-            <div id="evolutionpokemon"></div>
-            <button id="retour" onClick="window.location.reload()"><img id="retour-img" src="/assets/img/retour.png" alt=""></button>
+            <div id="div1"></div>
+            <div id="div2"></div>
+            <div id="div3"></div>
+            <div id="div4"></div>
+            <div id="div5"></div>
+            <button id="retour"><img id="retour-img" src="/assets/img/retour.png" alt=""></button>
         </div>
-    </div> -->
+    </div>
     </div>
 </body>
 </html>
