--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
                 <label for="radioName">Par nom</label>
                 <input type="radio" name="radio" value="radioElement" id="radioElement">
                 <label for="radioElement">Par element</label></div>
-            <select id="selection">
-            </select>
+            <select id="selection"><option value="0">--Selection--</option></select>
         </fieldset>
         </div>
         <button id="rechercher"><img id="chercher" src="/assets/img/chercher.png" alt=""></button>
